chua hoan chinh slider

--- a/index.html
+++ b/index.html
@@ -81,7 +81,49 @@
                 </nav>
             </div>
         </section>
+
+
+
     </header>
+
+    <section id="main-slider">
+
+        <div id="goneshopSlider" class="carousel slide" data-ride="carousel">
+
+            <div class="carousel-inner">
+                <div class="item item1 active">
+                    <div class="container">
+                        <div class="slideCaption">
+                            <p>spring summer 2015</p>
+                            <p>New High Collection</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu odio <br> non justo euismod congue ut nec orci.</p>
+                        </div>
+
+                        <div class="slide-button">
+                            <a href="#">
+                                <div class="viewMore">
+                                    view more
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="buyNow">
+                                    buy now
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="item item2">
+
+                </div>
+                <div class="item item3">
+
+                </div> -->
+            </div>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
