chua xong phan top rated

--- a/index.html
+++ b/index.html
@@ -124,6 +124,116 @@
         </div>
 
     </section>
+
+    <section id="freeService">
+        <div class="container">
+
+            <img src="image/features_img.png" class="img-responsive" alt="Image">
+
+        </div>
+    </section>
+
+    <section id="contentProduct">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-3">
+                    <div class="topRated">
+                        <div class="topRatedBoxTitle">
+                            top rated
+                        </div>
+
+                        <div class="box-top-rated-product media">
+                            <a class="pull-left media-link">
+                                <img src="image/img_top_rated_1.png" alt="">
+                            </a>
+
+                            <div class="infoProduct media-body">
+                                <p class="nameProduct media-heading">
+                                    <a href="">t-shirt</a>
+                                </p>
+                                <p class="depProduct">
+                                    Cras ipsum massa
+                                </p>
+                                <div class="price">
+                                    <ins>$20.99</ins>
+                                </div>
+                                <div class="rating">
+                                    <img src="image/rating.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box-top-rated-product media">
+                            <a class="pull-left media-link">
+                                <img src="image/img_top_rated_2.png" alt="">
+                            </a>
+
+                            <div class="infoProduct media-body">
+                                <p class="nameProduct media-heading">
+                                    <a href="">ACCESSORIES</a>
+                                </p>
+                                <p class="depProduct">
+                                    Cras ipsum massa
+                                </p>
+                                <div class="price">
+                                    <ins>$20.99</ins>
+                                </div>
+                                <div class="rating">
+                                    <img src="image/rating.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box-top-rated-product media">
+                            <a class="pull-left media-link">
+                                <img src="image/img_top_rated_3.png" alt="">
+                            </a>
+
+                            <div class="infoProduct media-body">
+                                <p class="nameProduct media-heading">
+                                    <a href="">sweaters</a>
+                                </p>
+                                <p class="depProduct">
+                                    Cras ipsum massa
+                                </p>
+                                <div class="price">
+                                    <ins>$20.99</ins>
+                                </div>
+                                <div class="rating">
+                                    <img src="image/rating.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="box-top-rated-product media">
+                            <a class="pull-left media-link">
+                                <img src="image/img_top_rated_1.png" alt="">
+                            </a>
+
+                            <div class="infoProduct media-body">
+                                <p class="nameProduct media-heading">
+                                    <a href="">shoes</a>
+                                </p>
+                                <p class="depProduct">
+                                    Cras ipsum massa
+                                </p>
+                                <div class="price">
+                                    <ins>$20.99</ins>
+                                </div>
+                                <div class="rating">
+                                    <img src="image/rating.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-9">
+                    <div class="featuresProduct">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
